syntax = "proto3";

package api.weather;

import "google/api/annotations.proto";

option go_package = "weather-router/api/weather;weather";
option java_multiple_files = true;
option java_package = "api.weather";

service Weather {
	rpc GetNowWeather (GetNowWeatherRequest) returns (GetNowWeatherResponse) {
		option (google.api.http) = {
			get: "/weather/v1/now"
		};
	}
}

message GetNowWeatherRequest {}
message GetNowWeatherResponse {}